@@ -1619,6 +1619,9 @@ static void handle_pdu(Connection *conn, Boxc *box, SMPP_PDU *pdu) {
 				msgid = octstr_create(id);
 				dict_put(box->msg_acks, msgid, resp);
 				resp = NULL;
+				if (msg != msg2) {
+					msg_destroy(msg);
+				}
 				send_msg(box->bearerbox_connection, box, msg2);
 				if (parts_list) {
 					/* destroy values */
@@ -1662,6 +1665,9 @@ static void handle_pdu(Connection *conn, Boxc *box, SMPP_PDU *pdu) {
 				dict_put(box->msg_acks, msgid, resp);
 				octstr_destroy(msgid);
 				resp = NULL;
+				if (msg != msg2) {
+					msg_destroy(msg);
+				}
 				send_msg(box->bearerbox_connection, box, msg2);
 				if (parts_list) {
 					/* destroy values */
@@ -1748,6 +1754,7 @@ static Boxc *boxc_create(int fd, Octstr *ip, int ssl)
     boxc->validityperiod = -1;	
     boxc->priority = 0;
     boxc->mo_recode = 0;
+    boxc->sms_service = NULL;
 
     return boxc;
 }
@@ -1775,7 +1782,8 @@ static void boxc_destroy(Boxc *boxc)
 	    octstr_destroy(boxc->client_ip);
     dict_destroy(boxc->msg_acks);
     dict_destroy(boxc->deliver_acks);
-    octstr_destroy(boxc->sms_service);
+    if (boxc->sms_service)
+	octstr_destroy(boxc->sms_service);
     gw_free(boxc);
 }
 
